<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wlcm_to">WELCOME TO</string>
    <string name="quizz">QUIZZ</string>
    <string name="recmnd">We recommend using Facebook so you can play against friends!</string>
    <string name="cnct_with_fb">\t\tConnect with Facebook</string>
    <string name="or">OR</string>
    <string name="vs">VS</string>
    <string name="sinup_email">\t\tSign Up with Email</string>
    <string name="alrdy_sign">Already signed up?</string>
    <string name="login_nw">Login Now!</string>
    <string name="sing_with">Sign In with</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="arr_dropdown">
        <item>Popular</item>
        <item>Latest</item>
        <item>Discount</item>
        <item>On Sale</item>
        <item>Upcoming</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">POPULAR TOPICS</string>
    <string name="logo">Logos</string>
    <string name="play_now">Play now!</string>
    <string name="general">General</string>
    <string name="movie">Movie</string>
    <string name="chalng">Challenge</string>
    <string name="rankings">Rankings</string>
    <string name="discussion">Discussions</string>
    <string name="all_topic">ALL 500 TOPICS</string>
    <string name="title_activity_topices">Topics</string>
    <string name="title_activity_win_or_loose">Result</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="eye_candy">The eye candy of all your favorite brands</string>
    <string name="all_think">All the things, everywhere!</string>
    <string name="best_movie">All of best Movie, Films, Trailer</string>
    <string name="title_activity_question">Question</string>
    <string name="player_name">Bruce Miller\nBeginner</string>
    <string name="player_prof">Philippe Jons\nProfessional</string>
    <string name="question">Name the professional sport organization represented by this logo.</string>
    <string name="ncca">NCCA \nBaseball</string>
    <string name="cbl">Canadian\n Baseball\n League</string>
    <string name="mlb">Major \nLeague \nBaseball</string>
    <string name="minlb">Minor \nLeague\n Baseball</string>
    <string name="title_activity_logos">Logos</string>
    <string name="miller">Bruce Miller</string>
    <string name="beginner">Beginner</string>
    <string name="jone">Philippe Jons</string>
    <string name="professional">Professional</string>
    <string name="level1">Level\n<b>1</b></string>
    <string name="rematch">Rematch</string>
    <string name="play_anotr">Play Another</string>
    <string name="title_activity_splesh">Splash</string>

</resources>
