<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad_10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/pad_5dp"
    android:src="@drawable/prize_cup"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/pad_10dp"
        android:textSize="@dimen/txt_30sp"
        android:text="@string/wlcm_to"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/pad_5dp"
        android:textSize="@dimen/txt_35sp"
        android:textStyle="bold"
        android:text="@string/quizz"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recmnd"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/pad_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/txt_16sp"/>
    <TextView
        android:id="@+id/btn_signup_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/btn_facebook_bg"
        android:textSize="@dimen/txt_20sp"
        android:gravity="center"

        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/cnct_with_fb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="@dimen/pad_10dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="@dimen/pad_10dp"
        android:textStyle="bold"
        android:textSize="@dimen/txt_16sp"/>
    <TextView
        android:id="@+id/btn_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_email_bg"
        android:textSize="@dimen/txt_20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"

        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/sinup_email"
         />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/pad_15dp"
    android:padding="@dimen/pad_10dp"
    android:id="@+id/btn_login_now"
    android:weightSum="2">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:textColor="@android:color/black"
        android:gravity="end"
        android:textSize="@dimen/txt_16sp"
        android:text="@string/alrdy_sign"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/pink_txt"
        android:gravity="start"
        android:layout_marginLeft="@dimen/pad_3dp"
        android:textStyle="bold"
        android:textSize="@dimen/txt_16sp"
        android:text="@string/login_nw"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_15dp"
        android:padding="@dimen/pad_10dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:textColor="@android:color/black"
            android:gravity="end"
            android:textSize="@dimen/txt_16sp"
            android:text="@string/sing_with"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/twitter"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="@dimen/txt_16sp"
            android:layout_marginLeft="@dimen/pad_3dp"
            android:text="@string/twitter"/>
    </LinearLayout>
    </LinearLayout>
