<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/que_beg"
    android:orientation="vertical"
    tools:context="com.quizeapp.Question">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_10dp">

        <ImageView
            android:id="@+id/img_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_pic"
            android:src="@drawable/question_user_mask" />

        <TextView
            android:id="@+id/txt_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_12sp"
            android:textColor="@color/white"
            android:text="@string/player_name"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_toRightOf="@+id/img_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18sp"
            android:textColor="@color/white"
            android:text="16"
            android:textStyle="bold"
            android:layout_below="@+id/txt_left"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_toRightOf="@+id/img_left" />

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_pic2"
            android:layout_alignParentRight="true"
            android:src="@drawable/question_user_mask" />

        <TextView
            android:id="@+id/txt_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_12sp"
            android:textColor="@color/white"
            android:text="@string/player_prof"
            android:gravity="right"
            android:layout_marginRight="@dimen/pad_10dp"
            android:layout_toLeftOf="@+id/img_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18sp"
            android:textColor="@color/white"
            android:text="20"
            android:textStyle="bold"
            android:layout_below="@+id/txt_right"
            android:layout_marginRight="@dimen/pad_10dp"
            android:layout_toLeftOf="@+id/img_right" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/counter"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/question"
        android:padding="@dimen/pad_10dp"
        android:textSize="@dimen/txt_28sp" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:src="@drawable/scrollbar"
            android:id="@+id/imageView"
            android:layout_alignBottom="@+id/ans3"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/img_que_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_marginRight="@dimen/pad_10dp"
            android:background="@drawable/outer_bg"
            android:src="@drawable/question_images"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scrollbar"
            android:layout_marginRight="@dimen/pad_10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/imageView2"
            android:layout_alignBottom="@+id/ans4"
            android:layout_alignParentTop="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_bg"
            android:layout_alignLeft="@+id/img_que_pic"
            android:textSize="@dimen/txt_20sp"
            android:padding="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/ans1"

            android:layout_below="@+id/img_que_pic"
            android:text="@string/ncca"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText"
            android:layout_alignBottom="@+id/ans2" />

        <TextView
            android:id="@+id/ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_bg"
            android:layout_alignRight="@+id/img_que_pic"
            android:layout_below="@+id/img_que_pic"
            android:text="@string/cbl"
            android:textSize="@dimen/txt_20sp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:padding="@dimen/pad_5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/editText"
            android:layout_toEndOf="@+id/editText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_bg"
            android:layout_alignLeft="@+id/img_que_pic"
            android:layout_below="@+id/ans1"
            android:text="@string/mlb"
            android:id="@+id/ans3"
            android:textSize="@dimen/txt_20sp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:gravity="center"
            android:padding="@dimen/pad_5dp"
            android:textColor="@color/black"
            android:layout_alignRight="@+id/ans1"
            android:layout_alignEnd="@+id/ans1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_bg"
            android:layout_alignRight="@+id/img_que_pic"
            android:layout_below="@+id/ans2"
            android:text="@string/minlb"
            android:id="@+id/ans4"
            android:padding="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:textSize="@dimen/txt_20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_alignLeft="@+id/ans2"
            android:layout_alignStart="@+id/ans2" />

        <TextView
            android:layout_width="@dimen/pad_10dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/img_que_pic"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>
</LinearLayout>