<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/blue_bg"
    android:paddingTop="@dimen/pad_10dp"
    android:paddingLeft="@dimen/pad_10dp"
    android:paddingRight="@dimen/pad_10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/btn_log"
        android:background="@drawable/outer_bg"
        android:layout_width="match_parent"
        android:padding="@dimen/pad_5dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/lb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/logo"
            android:textSize="@dimen/txt_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableRight="@drawable/circular_down_arrow"
            android:padding="@dimen/pad_10dp"
            android:drawableLeft="@drawable/ic_art"
            android:drawablePadding="@dimen/pad_10dp"
            android:layout_toRightOf="@+id/img_bag" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/rel_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/pad_10dp"
        android:layout_marginLeft="@dimen/pad_10dp"
        android:padding="@dimen/pad_5dp"
        android:orientation="vertical"

        android:background="@drawable/dropdown_inner_gray_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/pad_7dp"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_play"
                android:layout_weight="1"

                >

                <TextView
                    android:id="@+id/txt_ply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingLeft="@dimen/pad_5dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:background="@drawable/btn_rematch_bg"
                    android:drawableRight="@drawable/ic_play"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/play_now" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_raking"
                android:layout_weight="1"
                android:layout_gravity="right">


                <TextView
                    android:id="@+id/txt_clng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rematch_bg"
                    android:gravity="center"
                    android:paddingLeft="@dimen/pad_5dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:layout_centerInParent="true"
                    android:drawableRight="@drawable/ic_challenge"
                    android:textColor="@color/black"
                    android:text="@string/chalng" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/pad_10dp"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn_Challang">



                <TextView
                    android:id="@+id/txt_rak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rematch_bg"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:paddingLeft="@dimen/pad_5dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:drawableRight="@drawable/ic_ranking"
                    android:text="@string/rankings" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn_discissin">

                <TextView
                    android:id="@+id/txt_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/pad_5dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:background="@drawable/btn_rematch_bg"
                    android:drawableRight="@drawable/ic_discussion"
                    android:text="@string/discussion" />

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>